# kyro

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: stress_test.py
k8s/: deployment.yaml  service.yaml
script/: format  install_rust  presubmit
src/: config.rs  device.rs  distributed.rs  main.rs  metrics.rs  speculative.rs  worker.rs
src/api/: grammar.rs  mod.rs  openai.rs  tokenizer.rs
src/model/: attention_kernel.rs  config.rs  engine.rs  kv_cache.rs  layers.rs  llama.rs  loader.rs  lora.rs  mod.rs  model_registry.rs  moe.rs  pipeline.rs  quantized.rs  qwen.rs  vision.rs
src/model/quantization/: awq.rs  fp8.rs  gptq.rs  int4.rs  int8.rs  mod.rs
src/scheduler/: block_manager.rs  continuous_batching.rs  mod.rs  radix_cache.rs
