[package]
name = "kyro-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
safetensors = "0.3.1"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
prometheus = "0.13"
tokenizers = "0.13"
futures = "0.3"
async-stream = "0.3"
cudarc = { version = "0.9", optional = true }

[features]
default = []
cuda = ["dep:cudarc", "candle-core/cuda"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
